# coding-challenge-file-ai

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  docker-compose.yaml  main.py  pyproject.toml
app/: Dockerfile  pyproject.toml
app/files/input/: Invoice_1.xlsx  Invoice_1_2.xlsx  Invoice_1_3.xlsx  Invoice_2_1.xlsx  Invoice_2_2.xlsx  Invoice_3_1.xlsx  Invoice_4_1.xlsx  Invoice_4_2.xlsx  Invoice_5_1.xlsx  Invoices.xlsx  PurchaseOrder_2.xlsx  PurchaseOrder_3.xlsx  PurchaseOrder_4.xlsx  PurchaseOrder_5.xlsx
app/scripts/entity-relationship-diagrams/: fix_paracelsus_output.py  update_diagram.sh  update_readme.py
app/src/: .env  main.py
app/src/identifiers/: __init__.py  identifiers.py
app/src/ingestors/: __init__.py  files.py  invoice.py  purchase_order.py
app/src/models/: Invoice.py  PurchaseOrder.py  Report.py  __init__.py
app/src/reports/: __init__.py  reports.py
app/src/validators/: validators.py
app/tests/: .env.test  conftest.py  test_create_invoice.py  test_create_purchase_order.py
data/input/: PO.xlsx
database/: 001-trigger_update_updated_at_column.sql  002-purchase_order.sql  002-purchase_orders.sql  003-invoice.sql  003-invoices.sql  004-report.sql
scripts/: reset.sh
scripts/entity-relationship-diagrams/: fix_paracelsus_output.py  update_diagram.sh  update_readme.py
src/: main.py
