[project]
name = "file-ai-coding-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg>=3.3.2",
    "psycopg-binary>=3.3.2",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
]
